test/conformance/chainsaw/validating-policies/exceptions/empty-policy-ref/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: empty-policy-ref
spec:
  concurrent: false
  steps:
  - name: create exception
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: exception.yaml
